2005-11-23  Daniel Jacobowitz  <dan@codesourcery.com>
	    Thiemo Seufer <ths@networkno.de>

	* elf32-mips.c (elf_mips_howto_table_rel): Use rightshift 2 for
	R_MIPS_PC16.
	(mips_reloc_map): Map BFD_RELOC_16_PCREL_S2 to R_MIPS_PC16.
	(bfd_elf32_bfd_reloc_type_lookup): Don't handle
	BFD_RELOC_16_PCREL_S2.
	* elf64-mips.c (mips_elf64_howto_table_rel): Use rightshift 2 for
	R_MIPS_PC16.
	(mips_elf64_howto_table_rela): Likewise.
	(mips_reloc_map): Map BFD_RELOC_16_PCREL_S2 to R_MIPS_PC16.
	(bfd_elf64_bfd_reloc_type_lookup): Don't handle
	BFD_RELOC_16_PCREL_S2.
	* elfn32-mips.c (elf_mips_howto_table_rel): Use rightshift 2 for
	R_MIPS_PC16.
	(elf_mips_howto_table_rela): Likewise.
	(mips_reloc_map): Map BFD_RELOC_16_PCREL_S2 to R_MIPS_PC16.
	(bfd_elf32_bfd_reloc_type_lookup): Don't handle
	BFD_RELOC_16_PCREL_S2.
	* elfxx-mips.c: Formatting fixes.
	(mips_elf_calculate_relocation): Handle R_MIPS_GNU_REL16_S2
	and R_MIPS_PC16 identically.

2005-11-23  Frederic Riss  <frederic.riss@st.com>

	* elfcode.h (elf_object_p): Delay the setting of start_address
	until we're sure the backend matches the binary.

2005-11-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* som.c (som_decode_symclass): Decode BSF_WEAK symbols in the same
	manner as bfd_decode_symclass.

2005-11-18  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc64_elf_check_relocs): Don't set has_14bit_branch
	on branches to same section.

2005-11-17  Randolph Chung  <tausq@debian.org>

	* elf64-hppa.c (elf64_hppa_object_p): Recognize corefiles under
	hppa64-hp-hpux11.11.
	(elf64_hppa_section_from_phdr): New function.
	(elf_backend_section_from_phdr): Define.

2005-11-11  Nick Clifton  <nickc@redhat.com>

	PR 1150
	* elfxx-mips.c (mips_elf_calculate_relocation): Ignore an
	undefined symbol if it is optional.
	(_bfd_mips_elf_merge_symbol_attribute): Make sure that the
	optional flag is merged as well as the visibility.
	* elfxx-mips.h (_bfd_mips_elf_merge_symbol_attribute): Prototype.