@@ -1035,15 +1035,6 @@ _bfd_generic_find_line (bfd *abfd ATTRIBUTE_UNUSED,
 }
 
 bfd_boolean
-_bfd_generic_match_sections_by_type (bfd *abfd ATTRIBUTE_UNUSED,
-				     const asection *asec ATTRIBUTE_UNUSED,
-				     bfd *bbfd ATTRIBUTE_UNUSED,
-				     const asection *bsec ATTRIBUTE_UNUSED)
-{
-  return TRUE;
-}
-
-bfd_boolean
 _bfd_generic_init_private_section_data (bfd *ibfd ATTRIBUTE_UNUSED,
 					asection *isec ATTRIBUTE_UNUSED,
 					bfd *obfd ATTRIBUTE_UNUSED,
